# find3quare

./: Cargo.toml  build.rs
src/: cfun.rs  lib.rs  main.rs  mod.rs  three_square.rs  util.rs
src/lib/: build.sh  rust_three_square.cpp  three_square  three_square.cpp
