[package]
version = "0.1.0"
authors = ["root"]
edition = "2018"
name = "find3squares"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
dunce = "1.0.4"
cc = "1.0"

[dependencies]
libloading = "0.8.1"
libc = "0.2"
hex = "0.4"
foreign-types = "0.5.0"
rust-gmp = { version = "0.5.0"}
serde = { version = "1.0", features = ["derive"] }

